[EDIT] add data and models to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 train/train_data.xlsx
 train/rubert-tiny2-finetuned
+train/scaler.pkl
+train/xgb_dart.json
 
 process/lists
-process/rubert-tiny2-finetuned
-process/xgb_dart.json
-process/tinkoff_data.csv
+process/data
+process/models
 
 draft.py
 draft.ipynb
